--- a/subscription/pubspec.yaml
+++ b/subscription/pubspec.yaml
@@ -19,6 +19,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  date_range_picker: ^1.0.5
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -46,6 +47,7 @@ flutter:
    - images/paypal.png
    - images/voucher.png
    - images/debit.png
+   - images/price.png
 
 
   # An image asset can refer to one or more resolution-specific "variants", see
