--- a/subscription/pubspec.yaml
+++ b/subscription/pubspec.yaml
@@ -19,7 +19,8 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  date_range_picker: ^1.0.5
+  #date_range_picker: ^1.0.5
+  flutter_datetime_picker: ^1.3.8
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
