--- a/subscription/pubspec.yaml
+++ b/subscription/pubspec.yaml
@@ -21,6 +21,9 @@ dependencies:
     sdk: flutter
   #date_range_picker: ^1.0.5
   flutter_datetime_picker: ^1.3.8
+  sqflite: ^1.3.0+1
+  path_provider: ^1.6.7
+
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
