--- a/subscribeversion2/pubspec.yaml
+++ b/subscribeversion2/pubspec.yaml
@@ -26,6 +26,9 @@ dependencies:
   flutter_datetime_picker: ^1.3.8
   sqflite: ^1.3.0+1
   path_provider: ^1.6.7
+  intl:
+  keyboard_visibility: any
+
 
 
   # The following adds the Cupertino Icons font to your application.
