--- a/subscribeversion2/pubspec.yaml
+++ b/subscribeversion2/pubspec.yaml
@@ -58,6 +58,7 @@ flutter:
    - images/voucher.png
    - images/debit.png
    - images/price.png
+   - images/money.png
 
 
   # An image asset can refer to one or more resolution-specific "variants", see
