bugs(amount val), icon added, name changed

--- a/subscribeversion2/android/app/src/main/AndroidManifest.xml
+++ b/subscribeversion2/android/app/src/main/AndroidManifest.xml
@@ -9,8 +9,8 @@
 
     <application
         android:name="io.flutter.app.FlutterApplication"
-        android:label="subscribeversion2"
-        android:icon="@mipmap/ic_launcher">
+        android:label="Pocket Subscriptions"
+        android:icon="@mipmap/pocketicon">
         <activity
             android:name=".MainActivity"
             android:launchMode="singleTop"
