--- a/subscribeversion2/android/app/src/debug/AndroidManifest.xml
+++ b/subscribeversion2/android/app/src/debug/AndroidManifest.xml
@@ -1,5 +1,5 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.subscribeversion2">
+    package="com.example.pocket_subscriptions">
     <!-- Flutter needs it to communicate with the running application
          to allow setting breakpoints, to provide hot reload, etc.
     -->
